	Defaults to keep the whole list when there is no level-zero pref.

	* src/common/na-obj-action.c:
	Version number is not localized, so compare should be ascii.
	Action inherits from edition status of its profiles.

	* src/common/na-object-item.c:
	Optimizes check of edition status of subitems.

	* src/common/na-object.c:
	No more over-checks edition status of item's childs.

	* src/nact/nact-iactions-list.c:
	When duplicating an object, try to insert the new one besides
	the original one.

	* src/nact/nact-main-menubar.c (on_new_profile_activated):
	Setup edition status of new profile.

	* src/nact/nact-main-menubar.c (save_object_item):
	Cleanup the code.

	* src/nact/nact-tree-model.c:
	* src/nact/nact-tree-model.h (nact_tree_model_insert):
	Returns the path string of the newly inserted row, as it appears
	more liable that an iter after child model conversion.

2009-09-20 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-object-item.c (object_id_new_id):
	Function becomes recursive.

	src/common/na-object-item.c
	(na_object_item_append_item, na_object_item_insert_item):
	Only append/insert child item if not already recorded.

	* src/nact/nact-clipboard.c (renumber_items):
	Removes recursivity as it is provided by the class.

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h (nact_iactions_list_delete_selection):
	No more returns the path to be selected as this can be directly taken
	into account by the function itself.
	Check depth of path before trying gtk_tree_path_up.
	nact_iactions_list_select_row(): no more a public function.
	Fix row selection code.

	* src/nact/nact-iactions-list.c (select_row_at_path):
	Simulate a "selection-changed" signal emission with an empty selection
	in nothing can be selected.

	* src/nact/nact-iactions-list.c (do_insert_items):
	Do not rely on iter after a store_to_filter_model conversion.

	* src/nact/nact-main-menubar.c:
	Reorganize code to avoid the need of delete_selection returning