@@ -35,9 +35,9 @@
 #include <string.h>
 
 #include "na-object-api.h"
-#include "na-obj-action.h"
-#include "na-obj-profile.h"
-#include "na-obj-menu.h"
+#include "na-object-action.h"
+#include "na-object-profile.h"
+#include "na-object-menu.h"
 #include "na-gconf-monitor.h"
 #include "na-gconf-provider.h"
 #include "na-gconf-provider-keys.h"
