@@ -35,8 +35,8 @@
 #include <string.h>
 
 #include "na-object-api.h"
-#include "na-obj-action.h"
-#include "na-obj-profile.h"
+#include "na-object-action.h"
+#include "na-object-profile.h"
 #include "na-utils.h"
 
 /* private class data
