@@ -36,8 +36,8 @@
 #include <libxml/tree.h>
 
 #include "na-object-api.h"
-#include "na-obj-action.h"
-#include "na-obj-profile.h"
+#include "na-object-action.h"
+#include "na-object-profile.h"
 #include "na-gconf-provider-keys.h"
 #include "na-utils.h"
 #include "na-xml-names.h"
