@@ -37,7 +37,7 @@
 #include <string.h>
 
 #include <common/na-object-api.h>
-#include <common/na-obj-action-class.h>
+#include <common/na-object-action-class.h>
 #include <common/na-iio-provider.h>
 #include <common/na-utils.h>
 
