@@ -36,8 +36,8 @@
 #include <string.h>
 
 #include <common/na-object-api.h>
-#include <common/na-obj-action-class.h>
-#include <common/na-obj-profile.h>
+#include <common/na-object-action-class.h>
+#include <common/na-object-profile.h>
 #include <common/na-utils.h>
 
 #include "base-iprefs.h"
