@@ -35,9 +35,9 @@
 #include <string.h>
 
 #include <common/na-object-api.h>
-#include <common/na-obj-action.h>
-#include <common/na-obj-menu.h>
-#include <common/na-obj-profile.h>
+#include <common/na-object-action.h>
+#include <common/na-object-menu.h>
+#include <common/na-object-profile.h>
 #include <common/na-iprefs.h>
 #include <common/na-utils.h>
 
